# smalter-autodoc

./: .gitignore  README.md  file_accepted.json  file_accepted2.json  file_completed.json  file_rejected.json  main.py  pdf_accepted.json  pyproject.toml
frontend/: app.py
src/smalter_autodoc/api/: main.py
src/smalter_autodoc/core/: document_router.py  document_type_validator.py  file_type_detector.py  image_quality_checker.py  ocr_engine.py  pdf_to_image_converter.py
src/smalter_autodoc/core/agents/: bank_agent.py  base_agent.py  cash_agent.py  invoice_agent.py
src/smalter_autodoc/core/extractors/: hybrid_extractor.py  llm_extractor.py  pattern_manager.py  regex_extractor.py
src/smalter_autodoc/core/extractors/patterns/: base_patterns.py
src/smalter_autodoc/core/extractors/patterns/en/: invoice.py
src/smalter_autodoc/core/extractors/patterns/fr/: invoice.py
src/smalter_autodoc/models/: responses.py
src/smalter_autodoc/utils/: config.py
tests/: test_agents.py  test_file_type_detector.py  test_hybrid_full.py  test_image_quality.py  test_ocr_engine.py  test_regex_extractor.py  test_type_validator.py
tests/test_files/: welcome_doc.docx
